Bug 1936549 - Make empty cells more thoroughly not participate on baseline alignment. r=dshin

This matches other browsers, and was kinda what was intended with the
content empty check and such, I believe.

Differential Revision: https://phabricator.services.mozilla.com/D232375